--- a/oneweek/oneday/one.html
+++ b/oneweek/oneday/one.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Web课程设计 - 第一周 - 第一天 - 1 - 设计注册页面</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style></style>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/one.css" />
 </head>
+
 <body>
-    
+    <div class="bg"></div>
+    <div class="title">设计注册页面</div>
+    <div class="main">
+        <div class="form">
+            <form id="form">
+                <input type="text" name="username" placeholder="用户名" required autocomplete="off">
+                <input type="password" name="password1" placeholder="密码" required autocomplete="off">
+                <div class="strong">
+                    <div id="strong-one"></div>
+                    <div id="strong-two"></div>
+                    <div id="strong-three"></div>
+                </div>
+                <input type="password" name="password2" placeholder="确认密码" required autocomplete="off">
+                <input type="text" name="name" placeholder="姓名">
+                <input type="text" name="sex" placeholder="性别">
+                <input type="date" name="birthday" placeholder="生日">
+                <input type="address" name="location" placeholder="住址">
+                <input type="submit" value="注册">
+            </form>
+        </div>
+        <div class="notice">
+            <div class="notice-title">公告</div>
+            <div class="notice-cont">
+                刘叔正在设计的注册页面，响应式页面，手机也可以访问，为啥要说这一堆呢，就是想看看字多了能不能换行显示。
+            </div>
+        </div>
+    </div>
 </body>
+<script src="js/jquery.js"></script>
+<script src="js/one.js"></script>
+
 </html>
