--- a/oneweek/oneday/one.html
+++ b/oneweek/oneday/one.html
@@ -26,7 +26,7 @@
                 <input type="text" name="name" placeholder="姓名">
                 <input type="text" name="sex" placeholder="性别">
                 <input type="date" name="birthday" placeholder="生日">
-                <input type="address" name="location" placeholder="住址">
+                <input type="text" name="address" placeholder="住址">
                 <input type="submit" value="注册">
             </form>
         </div>
@@ -39,6 +39,7 @@
     </div>
 </body>
 <script src="js/jquery.js"></script>
+<script src="js/layer/layer.js"></script>
 <script src="js/one.js"></script>
 
 </html>
