--- a/oneweek/twoday/four.html
+++ b/oneweek/twoday/four.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Web课程设计 - 第一周 - 第二天 - 4 - 电子书</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/hour.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/four.css" />
 </head>
 
 <body>
@@ -23,6 +23,6 @@
 </body>
 <script src="js/jquery.js"></script>
 <script src="js/layer/layer.js"></script>
-<script src="js/hour.js"></script>
+<script src="js/four.js"></script>
 
 </html>
