--- a/oneweek/fourday/four.html
+++ b/oneweek/fourday/four.html
@@ -6,38 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Web课程设计 - 第一周 - 第四天 - 4 - 公司网页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/three.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/four.css" />
 </head>
 
 <body>
     <nav>
-        <span></span>
-        
-        <a href="javascript:;">下拉菜单二</a>
-        <div>
-            <a href="javascript:;">选项一</a>
-            <a href="javascript:;">选项二</a>
-            <a href="javascript:;">选项三</a>
-            <a href="javascript:;">选项四</a>
-        </div>
-        <a href="javascript:;">下拉菜单三</a>
-        <div>
-            <a href="javascript:;">选项一</a>
-            <a href="javascript:;">选项二</a>
-            <a href="javascript:;">选项三</a>
-            <a href="javascript:;">选项四</a>
-        </div>
-        <a href="javascript:;">下拉菜单四</a>
-        <div>
-            <a href="javascript:;">选项一</a>
-            <a href="javascript:;">选项二</a>
-            <a href="javascript:;">选项三</a>
-            <a href="javascript:;">选项四</a>
-        </div>
+        <img src="images/fourlogo.png">
+        <a href="javascript:;">Home</a>
+        <a href="javascript:;">About</a>
+        <a href="javascript:;">Contact</a>
+        <a href="javascript:;" class="right">Login</a>
     </nav>
+    <div style="height: 600px;">
+        
+    </div>
+    <div class="footer">
+        <a>XXXXXXXX备 xxxxxxxx号</a><span>XICP证xxxxxxxx号</span>
+    </div>
+    <div class="ad">
+        <h1>广告</h1>
+        <div class="close">关闭</div>
+    </div>
 </body>
 <script src="js/jquery.js"></script>
 <script src="js/layer/layer.js"></script>
-<script src="js/three.js"></script>
+<script src="js/four.js"></script>
 
 </html>
