--- a/twoweek/html/footer1.html
+++ b/twoweek/html/footer1.html
@@ -2,4 +2,5 @@
 </body>
 <script src="js/jquery.js"></script>
 <script src="js/layer/layer.js"></script>
+<script src="js/drag.js"></script>
 <script src="js/main.js"></script>
