--- a/twoweek/login_admin.html
+++ b/twoweek/login_admin.html
@@ -19,16 +19,23 @@
             position: fixed;
             z-index: 6666;
             background: white;
-            box-shadow: 0 0 10px wheat;
+            -webkit-box-shadow: 0 0 10px wheat;
+                    box-shadow: 0 0 10px wheat;
             top: calc(50% - 200px);
             left: calc(50% - 200px);
             padding: 20px;
         }
         #div1 > div, #div2 > div {
             height: 200px;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            align-items:center;
-            justify-content:center;
+            -webkit-box-align:center;
+                -ms-flex-align:center;
+                    align-items:center;
+            -webkit-box-pack:center;
+                -ms-flex-pack:center;
+                    justify-content:center;
         }
         #div1 input, #div2 input {
             width: 100px;
@@ -40,6 +47,7 @@
             border-radius: 30px;
             padding: 0 15px;
             background: whitesmoke;
+            -webkit-transition: all .6s;
             transition: all .6s;
         }
         #div1 input:focus, #div2 input:focus {
